Fixed pin handling, decryption, and layout issues.

--- a/mind-app/src/App.css
+++ b/mind-app/src/App.css
@@ -18,27 +18,36 @@
     @apply bg-transparent hover:bg-gray-900 text-gray-900 font-semibold hover:text-white py-2 px-4 border hover:border-transparent rounded;
   }
 
-  body {
-    margin: 0; /* Reset default margin */
+  .card-body {
+    margin: 0;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    height: 100vh; /* 100% of the viewport height */
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
-
+  
   .card-container {
     display: flex;
     flex-wrap: wrap;
     background-color: rgb(31, 41, 55);
+    margin: 0 auto; /* Center the container horizontally */
+    max-width: 1200px; /* Set a maximum width for the container if needed */
   }
-
+  
   .card {
     border: 2px solid rgb(31, 41, 55);
     border-radius: 8px;
     background-color: rgb(203, 213, 225);
     padding: 16px;
     margin: 16px;
-    width: 300px; /* Adjust the width as needed */
+    width: 300px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Media query for smaller screens */
+  @media (max-width: 768px) {
+    .card {
+      width: 100%; /* Make the cards take 100% of the container width on smaller screens */
+    }
   }
 }
